--- a/src/BulkRename/Views/History/Index.cshtml
+++ b/src/BulkRename/Views/History/Index.cshtml
@@ -7,18 +7,18 @@
 <!DOCTYPE html>
 
 <head>
-    <title>History</title>
+    <title>Előzmények</title>
     <meta charset="utf-8" />
 </head>
 
 <head>
     <meta charset="utf-8" />
-    <title>Series</title>
+    <title>Sorozatok</title>
     <link href="~/css/customStyles.css" rel="stylesheet" />
 </head>
 
 <div class="text-start">
-    <a class="btn btn-primary" href="@Url.Action("LoadHistory", "History")">Load History</a>
+    <a class="btn btn-primary" href="@Url.Action("LoadHistory", "History")">Előzmények betöltése</a>
 </div>
 
 <br />
