--- a/src/BulkRename/Views/Series/Index.cshtml
+++ b/src/BulkRename/Views/Series/Index.cshtml
@@ -8,12 +8,12 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Series</title>
+    <title>Sorozatok</title>
     <link href="~/css/customStyles.css" rel="stylesheet"/>
 </head>
 
 <div class="text-start">
-    <a class="btn btn-success" href="@Url.Action("Rename")">Submit Renaming</a>
+    <a class="btn btn-success" href="@Url.Action("Rename")">Átnevezés beküldése</a>
 </div>
 
 <br/>
