--- a/src/BulkRename/Views/Series/Rename.cshtml
+++ b/src/BulkRename/Views/Series/Rename.cshtml
@@ -8,10 +8,10 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Series</title>
+    <title>Sorozatok</title>
     <link href="~/css/customStyles.css" rel="stylesheet"/>
 </head>
 
-<h1>Successfully renamed files</h1>
+<h1>Sikeresen átnevezett fájlok</h1>
 
 @Html.DisplayFor(model => model, "SeriesTable")
