--- a/src/BulkRename/Views/Shared/DisplayTemplates/SeriesTable.cshtml
+++ b/src/BulkRename/Views/Shared/DisplayTemplates/SeriesTable.cshtml
@@ -6,8 +6,8 @@
     <table class="customtable">
         <tbody>
             <tr>
-                <th class="oldname">Old Name</th>
-                <th class="newname">New Name</th>
+                <th class="oldname">Rági fájlnév</th>
+                <th class="newname">Új fájlnév</th>
             </tr>
             @foreach (var ser in s.Value)
             {
