--- a/src/BulkRename/Views/Shared/_Layout.cshtml
+++ b/src/BulkRename/Views/Shared/_Layout.cshtml
@@ -21,13 +21,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Kezdőlap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Index">Sorozatok</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="History" asp-action="Index">History</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="History" asp-action="Index">Előzmények</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - BulkRename - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+            &copy; 2024 - BulkRename - <a asp-area="" asp-controller="Home" asp-action="Index">Kezdőlap</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
