--- a/src/BulkRename/Views/Home/Index.cshtml
+++ b/src/BulkRename/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 <head>
-    <title>Home</title>
+    <title>Kezdőlap</title>
     <meta charset="utf-8"/>
 </head>
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to BulkRename</h1>
-    <a class="btn btn-primary" href="Series">Preview Renaming of TV-Shows</a>
+    <h1 class="display-4">Üdvözöl a BulkRename!</h1>
+    <a class="btn btn-primary" href="Series">TV-műsorok átnevezése előnézet</a>
 </div>
