--- a/src/BulkRename/Views/Shared/Error.cshtml
+++ b/src/BulkRename/Views/Shared/Error.cshtml
@@ -3,23 +3,23 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Hiba.</h1>
+<h2 class="text-danger">Hiba történt a kérése feldolgozása során.</h2>
 
 @if (Model?.ShowRequestId ?? false)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model?.RequestId</code>
+        <strong>Kérés ID:</strong> <code>@Model?.RequestId</code>
     </p>
 }
 
-<h3>Development Mode</h3>
+<h3>Fejlesztői mód</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    A <strong>Fejlesztői</strong> környezetre váltás részletesebb információkat jelenít meg a bekövetkezett hibáról.
 </p>
 <p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
+    <strong>A fejlesztői környezetet nem szabad engedélyezni a telepített alkalmazásokhoz.</strong>
+    Ez a kivételekből származó érzékeny információk megjelenítését eredményezheti a végfelhasználók számára.
+    A helyi hibakereséshez engedélyezze a következő <strong>Fejlesztői</strong> környezetet: <strong>ASPNETCORE_ENVIRONMENT</strong> környezeti változók között a <strong>Fejlesztői</strong>
+    beállításokban, és indítsa újra az alkalmazást.
 </p>
