--- a/src/BulkRename/Views/History/Index.cshtml
+++ b/src/BulkRename/Views/History/Index.cshtml
@@ -1,24 +1,28 @@
-﻿@{
-    ViewData["Title"] = "History";
-}
+﻿@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<SharedResource> SharedLocalizer
 
 @model Dictionary<string, List<Series>>
+
+@{
+    ViewData["Title"] = "History";
+}
 
 <!DOCTYPE html>
 
 <head>
-    <title>History</title>
+    <title>@SharedLocalizer["History"]</title>
     <meta charset="utf-8" />
 </head>
 
 <head>
     <meta charset="utf-8" />
-    <title>Series</title>
+    <title>@SharedLocalizer["Series"]</title>
     <link href="~/css/customStyles.css" rel="stylesheet" />
 </head>
 
 <div class="text-start">
-    <a class="btn btn-primary" href="@Url.Action("LoadHistory", "History")">Load History</a>
+    <a class="btn btn-primary" href="@Url.Action("LoadHistory", "History")">@SharedLocalizer["LoadHistory"]</a>
 </div>
 
 <br />
