--- a/src/BulkRename/Views/Series/Index.cshtml
+++ b/src/BulkRename/Views/Series/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<SharedResource> SharedLocalizer
+
+@{
     ViewData["Title"] = "Series";
 }
 
@@ -8,7 +12,7 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Series</title>
+    <title>@SharedLocalizer["Series"]</title>
     <link href="~/css/customStyles.css" rel="stylesheet"/>
 </head>
 
