Use localization for title

--- a/src/BulkRename/Views/History/Index.cshtml
+++ b/src/BulkRename/Views/History/Index.cshtml
@@ -5,7 +5,7 @@
 @model Dictionary<string, List<Series>>
 
 @{
-    ViewData["Title"] = "History";
+    ViewData["Title"] = SharedLocalizer["History"];
 }
 
 <!DOCTYPE html>
