--- a/src/BulkRename/Views/Home/Index.cshtml
+++ b/src/BulkRename/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @inject IStringLocalizer<SharedResource> SharedLocalizer
 
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = @SharedLocalizer["Home"];
 }
 
 <head>
