--- a/src/BulkRename/Views/Series/Index.cshtml
+++ b/src/BulkRename/Views/Series/Index.cshtml
@@ -3,7 +3,7 @@
 @inject IStringLocalizer<SharedResource> SharedLocalizer
 
 @{
-    ViewData["Title"] = "Series";
+    ViewData["Title"] = @SharedLocalizer["Series"];
 }
 
 @model Dictionary<string, List<Series>>
