Use constants for the keys

--- a/src/BulkRename/Views/Home/Index.cshtml
+++ b/src/BulkRename/Views/Home/Index.cshtml
@@ -1,17 +1,18 @@
-﻿@using Microsoft.Extensions.Localization
+﻿@using BulkRename.Constants
+@using Microsoft.Extensions.Localization
 
 @inject IStringLocalizer<SharedResource> SharedLocalizer
 
 @{
-    ViewData["Title"] = @SharedLocalizer["Home"];
+    ViewData["Title"] = @SharedLocalizer[LocalizationConstants.HOME];
 }
 
 <head>
-    <title>@SharedLocalizer["Home"]</title>
+    <title>@SharedLocalizer[LocalizationConstants.HOME]</title>
     <meta charset="utf-8"/>
 </head>
 
 <div class="text-center">
-    <h1 class="display-4">@SharedLocalizer["WelcomeToBulkRename"]</h1>
-    <a class="btn btn-primary" href="Series">@SharedLocalizer["PreviewRenamingOfTvShows"]</a>
+    <h1 class="display-4">@SharedLocalizer[LocalizationConstants.WELCOME_TO_BULK_RENAME]</h1>
+    <a class="btn btn-primary" href="Series">@SharedLocalizer[LocalizationConstants.PREVIEW_RENAMING_OF_TV_SHOWS]</a>
 </div>
