--- a/src/BulkRename/Views/History/Index.cshtml
+++ b/src/BulkRename/Views/History/Index.cshtml
@@ -1,28 +1,29 @@
-﻿@using Microsoft.Extensions.Localization
+﻿@using BulkRename.Constants
+@using Microsoft.Extensions.Localization
 
 @inject IStringLocalizer<SharedResource> SharedLocalizer
 
 @model Dictionary<string, List<Series>>
 
 @{
-    ViewData["Title"] = SharedLocalizer["History"];
+    ViewData["Title"] = SharedLocalizer[LocalizationConstants.HISTORY];
 }
 
 <!DOCTYPE html>
 
 <head>
-    <title>@SharedLocalizer["History"]</title>
+    <title>@SharedLocalizer[LocalizationConstants.HISTORY]</title>
     <meta charset="utf-8" />
 </head>
 
 <head>
     <meta charset="utf-8" />
-    <title>@SharedLocalizer["Series"]</title>
+    <title>@SharedLocalizer[LocalizationConstants.SERIES]</title>
     <link href="~/css/customStyles.css" rel="stylesheet" />
 </head>
 
 <div class="text-start">
-    <a class="btn btn-primary" href="@Url.Action("LoadHistory", "History")">@SharedLocalizer["LoadHistory"]</a>
+    <a class="btn btn-primary" href="@Url.Action("LoadHistory", "History")">@SharedLocalizer[LocalizationConstants.LOAD_HISTORY]</a>
 </div>
 
 <br />
