--- a/src/BulkRename/Views/Series/Rename.cshtml
+++ b/src/BulkRename/Views/Series/Rename.cshtml
@@ -1,9 +1,10 @@
-﻿@using Microsoft.Extensions.Localization
+﻿@using BulkRename.Constants
+@using Microsoft.Extensions.Localization
 
 @inject IStringLocalizer<SharedResource> SharedLocalizer
 
 @{
-    ViewData["Title"] = @SharedLocalizer["Series"];
+    ViewData["Title"] = @SharedLocalizer[LocalizationConstants.SERIES];
 }
 
 @model Dictionary<string, List<Series>>
@@ -12,10 +13,10 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>@SharedLocalizer["Series"]</title>
+    <title>@SharedLocalizer[LocalizationConstants.SERIES]</title>
     <link href="~/css/customStyles.css" rel="stylesheet"/>
 </head>
 
-<h1>@SharedLocalizer["SuccessfullyRenamedFiles"]</h1>
+<h1>@SharedLocalizer[LocalizationConstants.SUCCESSFULLY_RENAMED_FILES]</h1>
 
 @Html.DisplayFor(model => model, "SeriesTable")
