--- a/src/BulkRename/Views/Shared/Error.cshtml
+++ b/src/BulkRename/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using BulkRename.Constants
+@using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 
 @inject IStringLocalizer<SharedResource> SharedLocalizer
@@ -7,11 +8,11 @@
 @model ErrorViewModel
 
 @{
-    ViewData["Title"] = SharedLocalizer["Error"];
+    ViewData["Title"] = SharedLocalizer[LocalizationConstants.ERROR];
 }
 
-<h1 class="text-danger">@SharedLocalizer["Error"].</h1>
-<h2 class="text-danger">@SharedLocalizer["AnErrorOccuredHeader"]</h2>
+<h1 class="text-danger">@SharedLocalizer[LocalizationConstants.ERROR].</h1>
+<h2 class="text-danger">@SharedLocalizer[LocalizationConstants.AN_ERROR_OCCURED_HEADER]</h2>
 
 @if (Model?.ShowRequestId ?? false)
 {
@@ -20,10 +21,10 @@
     </p>
 }
 
-<h3>@SharedLocalizer["DevelopmentMode"]</h3>
+<h3>@SharedLocalizer[LocalizationConstants.DEVELOPMENT_MODE]</h3>
 <p>
-    @SharedHtmlLocalizer["SwappingToDevelopmentModeDisplay"]
+    @SharedHtmlLocalizer[LocalizationConstants.SWAPPING_TO_DEVELOPMENT_MODE_DISPLAY]
 </p>
 <p>
-    @SharedHtmlLocalizer["DetailedErrorMessage"]
+    @SharedHtmlLocalizer[LocalizationConstants.DETAILED_ERROR_MESSAGE]
 </p>
