Add missing translation

--- a/src/BulkRename/Views/Shared/Error.cshtml
+++ b/src/BulkRename/Views/Shared/Error.cshtml
@@ -17,7 +17,7 @@
 @if (Model?.ShowRequestId ?? false)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model?.RequestId</code>
+        <strong>@SharedLocalizer[LocalizationConstants.REQUEST] ID:</strong> <code>@Model?.RequestId</code>
     </p>
 }
 
