--- a/src/BulkRename/Views/Series/Index.cshtml
+++ b/src/BulkRename/Views/Series/Index.cshtml
@@ -18,7 +18,7 @@
 </head>
 
 <div class="text-start">
-    <a class="btn btn-success" href="@Url.Action("Rename")">Submit Renaming</a>
+    <a class="btn btn-success" href="@Url.Action("Rename")">@SharedLocalizer[LocalizationConstants.SUBMIT_RENAMING]</a>
 </div>
 
 <br/>
