Add project and support page to the footer

--- a/src/BulkRename/Views/Shared/_Layout.cshtml
+++ b/src/BulkRename/Views/Shared/_Layout.cshtml
@@ -45,9 +45,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - BulkRename - <a asp-area="" asp-controller="Home" asp-action="Index">@SharedLocalizer[LocalizationConstants.HOME]</a>
+    <footer class="footer text-muted">
+        <div class="container footer-links">
+            <a>&copy; 2024 - BulkRename</a>
+            <a href="https://github.com/Ramo-Y/BulkRename">Project page</a>
+            <a href="https://github.com/sponsors/Ramo-Y">&hearts; Support this project</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
