Get Current year automatically

--- a/src/BulkRename/Views/Shared/_Layout.cshtml
+++ b/src/BulkRename/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <footer class="footer text-muted">
         <div class="container footer-links">
-            <a>&copy; 2024 - BulkRename</a>
+            <a>&copy; @DateTime.Now.Year - BulkRename</a>
             <a href="https://github.com/Ramo-Y/BulkRename">Project page</a>
             <a href="https://github.com/sponsors/Ramo-Y">&hearts; Support this project</a>
         </div>
