Add empty about page

--- a/src/BulkRename/Views/Shared/_Layout.cshtml
+++ b/src/BulkRename/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="History" asp-action="Index">@SharedLocalizer[LocalizationConstants.HISTORY]</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Index">@SharedLocalizer[LocalizationConstants.ABOUT]</a>
+                        </li>
                     </ul>
                 </div>
             </div>
